--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "es6": "0.0.7",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "graphql": "^14.5.8"
+    "graphql": "^14.5.8",
+    "mongoose": "^5.7.3",
+    "node-core-lib": "^0.11.11"
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
