--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chart.js": "^1.1.1",
     "dataloader": "^1.4.0",
     "es6": "0.0.7",
     "express": "^4.17.1",
@@ -19,7 +20,8 @@
     "graphql": "^14.5.8",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3",
-    "node-core-lib": "^0.11.11"
+    "node-core-lib": "^0.11.11",
+    "react-chartjs": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
