--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chart.js": "^2.9.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dataloader": "^2.0.0",
     "es6": "0.0.7",
-    "express": "^4.17.1",
+    "express": "^5.0.0-alpha.7",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
     "jsonwebtoken": "^8.5.1",
@@ -24,6 +26,14 @@
     "react-chartjs": "^1.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.0"
+    "@types/compression": "^1.0.1",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.2",
+    "@types/node": "^12.12.14",
+    "nodemon": "^2.0.0",
+    "ts-node": "^8.5.4",
+    "tsc-watch": "^4.0.0",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.3"
   }
 }
