--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/node-fetch": "^2.5.4",
+    "apollo-server-express": "^2.9.13",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chart.js": "^2.9.3",
@@ -20,8 +23,10 @@
     "express": "^5.0.0-alpha.7",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
+    "http": "0.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.12",
+    "ncp": "^2.0.0",
     "node-core-lib": "^0.11.11",
     "react-chartjs": "^1.2.0"
   },
@@ -29,7 +34,14 @@
     "@types/compression": "^1.0.1",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
+    "@types/graphql": "^14.5.0",
+    "@types/graphql-depth-limit": "^1.1.2",
+    "@types/jsonwebtoken": "^8.3.5",
+    "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.14",
+    "graphql-depth-limit": "^1.1.0",
+    "graphql-import": "^0.7.1",
+    "graphql-import-node": "0.0.4",
     "nodemon": "^2.0.0",
     "ts-node": "^8.5.4",
     "tsc-watch": "^4.0.0",
