--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node 'dist/server.js'",
+    "build": "tsc -p ."
   },
   "author": "",
   "license": "ISC",
@@ -14,11 +15,13 @@
     "@types/node-fetch": "^2.5.4",
     "apollo-server-express": "^2.9.13",
     "bcryptjs": "^2.4.3",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "chart.js": "^2.9.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dataloader": "^2.0.0",
+    "dotenv": "^8.2.0",
     "es6": "0.0.7",
     "express": "^5.0.0-alpha.7",
     "express-graphql": "^0.9.0",
@@ -31,8 +34,10 @@
     "react-chartjs": "^1.2.0"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.29",
     "@types/compression": "^1.0.1",
     "@types/cors": "^2.8.6",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/graphql": "^14.5.0",
     "@types/graphql-depth-limit": "^1.1.2",
